# gripper

./: README.md
install/: local_setup.sh  setup.sh
install/gripper_control/lib/gripper_control/: servo_control_node  servo_controller
install/gripper_control/share/gripper_control/: package.bash  package.sh  package.xml  package.zsh
install/gripper_control/share/gripper_control/launch/: gripper.launch.py  push_motor.launch.py
log/: latest_build
src/gripper_control/: setup.py
src/gripper_control/gripper_control/: servo_controller.py
src/gripper_control/gripper_control/servo_control/: servo_controller.py  servo_press_node.py  servo_rotate_node.py
src/gripper_control/gripper_control/servo_monitor/: monitor_press_node.py  monitor_rotate_node.py  servo_monitor_node.py
src/gripper_control/gripper_control/servo_monitor.py/: servo_monitor_node.py
src/gripper_control/launch/: gripper.launch.py  rotate_motor.launch.py  servo_control.launch.py
