<?xml version="1.0"?>
<package format="3">
  <name>gripper_control</name>
  <version>0.0.1</version>
  <description>Servo motor controller for gas pump gripper using Raspberry Pi</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>